--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
-    "react-scripts": "^1.1.4"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "^1.1.4",
+    "semantic-ui-react": "^0.80.2"
   },
   "scripts": {
     "start": "react-scripts start",
