--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "eslint": "^4.19.1",
+    "json-server": "^0.14.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
@@ -18,7 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint" : "node_modules/.bin/eslint ."
+    "lint": "node_modules/.bin/eslint .",
+    "server": "json-server -p3001 db.json"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3"
