--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "axios": "^0.18.0",
     "eslint": "^4.19.1",
     "json-server": "^0.14.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.4",
     "redux": "^4.0.0",
@@ -18,12 +20,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "node_modules/.bin/eslint .",
+    "test": "react-scripts test --env=jsdom",
     "server": "json-server -p3001 db.json"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3"
+    "babel-eslint": "^8.2.3",
+    "deep-freeze": "0.0.1",
+    "jest": "^23.1.0"
   }
 }
