--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^1.1.4",
     "redux": "^4.0.0",
     "redux-devtools": "^3.4.1",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.80.2"
   },
   "scripts": {
